--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,14 @@ body {
     padding: 0;
     color: #fff;
     position: relative;
-    overflow: hidden;
-    height: 100vh;
+    overflow: auto;
+    height: auto;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    cursor: url('pawcursor.png'), auto;
 }
 
 body::before {
@@ -160,7 +162,7 @@ footer {
     top: 0;
     width: 100%; 
     height: 100%; 
-    background-color: rgba(0,0,0,0.4); 
+    background-color: rgba(0, 0, 0, 0.575); 
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
 }
@@ -174,21 +176,8 @@ footer {
     max-width: 300px;
     text-align: center;
     color: #fff; /* Change text color to white for better visibility */
-}
-
-.close {
-    color: #fd6efd;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    margin-top: -10px;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+    max-height: 90vh; /* Limit the height to 90% of the viewport height */
+    overflow-y: auto; /* Enable vertical scrolling if needed */
 }
 
 .modal .button {
@@ -228,6 +217,8 @@ footer {
     }
 
     .container {
+        height: auto; /* Adjust height to be automatic */
+        overflow-y: auto; /* Allow vertical scrolling */
         padding: 1em;
         margin: 1em auto; /* Adjust margin for mobile */
     }
